[package]
name = "hush_core_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"                 # audio I/O
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ringbuf = "0.2"               # SPSC ring buffer
parking_lot = "0.12"          # fast mutex (optional)
anyhow = "1.0"
